--- a/sections/featured-product-spotlight.liquid
+++ b/sections/featured-product-spotlight.liquid
@@ -422,7 +422,7 @@
 
 {% schema %}
 {
-  "name": "Featured Product Spotlight",
+  "name": "Product Spotlight",
   "class": "section",
   "settings": [
     {
@@ -504,7 +504,7 @@
   ],
   "presets": [
     {
-      "name": "Featured Product Spotlight",
+      "name": "Product Spotlight",
       "category": "Products"
     }
   ]
